--- a/CI/css/4-col-portfolio.css
+++ b/CI/css/4-col-portfolio.css
@@ -8,7 +8,6 @@ body {
   padding-top: 0px;
 }
 
-
 .portfolio-item {
   margin-bottom: 0px;
 }
@@ -16,3 +15,13 @@ body {
 .pagination {
   margin-bottom: 0px;
 }
+
+#carro {
+  float:left;
+}
+
+#imgCarrito {
+  width:60px;
+  height: 60px;
+}
+
